Revert "add gRPC API verify email"
This reverts commit bf5927cba9db0327b9c18f2f20699fecd3a10cce.
