# doc/swagger/simple_bank.swagger.json
@@ -111,42 +111,6 @@
           "SimpleBank"
         ]
       }
-    },
-    "/v1/verify_email": {
-      "get": {
-        "operationId": "SimpleBank_VerifyEmail",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/pbVerifyEmailResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "emailId",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "secretCode",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "SimpleBank"
-        ]
-      }
     }
   },
   "definitions": {
@@ -255,14 +219,6 @@
         "createdAt": {
           "type": "string",
           "format": "date-time"
-        }
-      }
-    },
-    "pbVerifyEmailResponse": {
-      "type": "object",
-      "properties": {
-        "isVerified": {
-          "type": "boolean"
         }
       }
     },
