# gapi/rpc_verify_email.go
@@ -1,44 +1,0 @@
-package gapi
-
-import (
-	"context"
-	"google.golang.org/genproto/googleapis/rpc/errdetails"
-	"google.golang.org/grpc/codes"
-	"google.golang.org/grpc/status"
-	db "simple-bank/db/sqlc"
-	"simple-bank/pb"
-	"simple-bank/val"
-)
-
-func (server *Server) VerifyEmail(ctx context.Context, req *pb.VerifyEmailRequest) (*pb.VerifyEmailResponse, error) {
-	violations := validateVerifyEmailRequest(req)
-	if violations != nil {
-		return nil, invaildArgumentError(violations)
-	}
-
-	txResult, err := server.store.VerifyEmailTx(ctx, db.VerifyEmailTxParams{
-		EmailId:    req.GetEmailId(),
-		SecretCode: req.GetSecretCode(),
-	})
-	if err != nil {
-		return nil, status.Errorf(codes.Internal, "failed to verify email")
-	}
-
-	rsq := &pb.VerifyEmailResponse{
-		IsVerified: txResult.User.IsEmailVerified,
-	}
-
-	return rsq, nil
-}
-
-func validateVerifyEmailRequest(req *pb.VerifyEmailRequest) (validations []*errdetails.BadRequest_FieldViolation) {
-	if err := val.ValidateEmailID(req.GetEmailId()); err != nil {
-		validations = append(validations, fieldViolation("email_id", err))
-	}
-
-	if err := val.ValidateSecretCode(req.GetSecretCode()); err != nil {
-		validations = append(validations, fieldViolation("secret_code", err))
-	}
-
-	return validations
-}
